--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  {% block title %}<title>Certificações de Conhecimento</title>{% endblock %}
+  {% block title %}<title>Calendário</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -13,10 +13,6 @@
   <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-
-  <!-- favicon -->
-  {% comment %} <link rel='shortcut icon' type='image/x-icon'
-    href='https://ifrs.edu.br/caxias/wp-content/themes/ifrs-portal-theme/favicons/favicon-16x16.png' /> {% endcomment %}
   {{ form.media.css }}
 
 </head>
@@ -31,9 +27,7 @@
           <div class="row">
             <div class="col-12 col-md-2 d-none d-md-block">
             logo instituição
-              {% comment %} <a href="https://ifrs.edu.br/caxias/"><img
-                  src="https://ifrs.edu.br/caxias/wp-content/themes/ifrs-portal-theme-campus/img/if.png"
-                  alt="Logo do IF" class="mx-auto"></a> {% endcomment %}
+              
             </div>
             <div class="col-12 col-md-10">
               <div class="row">
@@ -58,24 +52,9 @@
     <div class="row">
       <div class="col-sm-2">
         {% block sidebar %}
-        <ul class="sidebar-nav">
-          {% if user.is_authenticated %}
-          <li>User: {{ user.get_full_name }}</li>
-          <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-          {% else %}
-          <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-          {% endif %}
-          <hr>
-          {% comment %} <li><a href="{% url 'home' %}">Home</a></li>
-          {% endcomment %}
-          <li><a href=" {% url 'cc:solicitacoes' %}">Solicitacões</a></li>
-          {% if user.is_staff %}
-          <li><a href="/admin">Administração</a></li>
-          <li><a href="{% url 'calendario:calendarios'%}">Calendários</a></li>
-          <li><a href="{% url 'curso:cursos'%}">Cursos</a></li>
-          <li><a href="{% url 'curso:disciplinas'%}">Disciplinas</a></li>
-          <li><a href="{% url 'users'%}">Usuários</a></li>
-          {% endif %}
+        <ul class="sidebar-nav">          
+          <li><a href="admin">Administração</a></li>         
+          <li><a href="{% url 'calendario:calendarios'%}">Calendários</a></li>         
         </ul>
         {% endblock %}
       </div>
@@ -118,9 +97,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-{% comment %} django-select2 {% endcomment %}
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
  
 {% load static %}
 <script src={% static 'js/scripts.js' %}></script>
